# Remotely

./: pyproject.toml  requirements.txt
.circleci/: config.yml
remotely/: main.py  remote_ssh.py  testing.py
remotely/remotely_app/: app.py
remotely/remotely_app/assets/: style.css
remotely/remotely_app/components/: component_util.py  configuration_generator.py  mainpage.py
remotely/remotely_logger/: logger_main.py
remotely/remotelyconfigmanager/: config_handler.py  remotely_config_db_util.py
tests/: test_remote_ssh.py
