[tool.poetry]
name = "remotely"
version = "0.1.0"
description = ""
authors = ["Anish Karki <anish.karki3579@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
paramiko = "^3.1.0"
coverage = "^7.2.2"
mock = "^5.0.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^7.1.2"

[tool.poetry.scripts]
my-script = "remotely.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
